--- a/client/style.css
+++ b/client/style.css
@@ -1,3 +1,58 @@
-body {
-    background-color: ghostwhite;
+.logo {
+    position: absolute;
+    width: 200px;
+    top: 0;
+    left: 0;
+}
+
+#welcomePage {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#welcomePage input {
+    display: block;
+    margin: 10px;
+    
+}
+
+#h1Welcome {
+    font-family: 'Libre Barcode 39 Text', cursive;
+    font-size: 100px;
+    margin: 25px;
+    margin-bottom: 50px;
+}
+
+#registerHere {
+    font-family: 'Roboto Slab', serif;
+    padding: 10px;
+
+}
+
+#registerDiv {
+    display: flex;
+    flex-direction: column;
+}
+
+.submitButton {
+    margin: 10px;
+   margin-top: 30px;
+   font-size: 20px;
+}
+
+.footer p{
+    position: fixed;
+    bottom: 0;
+    left: 10px;
+}
+
+.footer img {
+    width: 50px;
+    bottom: 0;
+    right: 0;
+    position: fixed;
+    background-repeat: repeat-x;
+    background-image: url("./taco.jpg");
 }
