--- a/client/style.css
+++ b/client/style.css
@@ -64,12 +64,18 @@
     right: 25px;
     position: absolute;
 }
+
+#registerA {
+        font-family: "Roboto Slab", serif;
+    padding: 10px;
+}
 /* end welcome/registration */
 
 /* uploader/profilepic */
 
 #uploader {
-    border: 3px solid yellow;
+    border: 3px solid orange;
+   
 }
 
 #profilePicca {
@@ -80,14 +86,76 @@
 .profile-pic {
     width: 125px;
     border: 3px solid black;
-    border-radius: 25%;
+    border-radius: 50%;
+    object-fit:cover;
 }
 
 .bioPic {
     border: 3px solid purple;
     display: flex;
     justify-content: center;
+    align-self: center;
+
     
 }
-/* end uploader/profilePic */
+
+#bio {
+    border: 2px red solid;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-self: center;
+    flex-direction: column;
+    font-family: "Roboto Slab", serif;
+    padding: 10px;
+}
+
+#bio button {
+    margin: 10px;
+    font-family: "Roboto Slab", serif;
+    /* padding: 10px; */
+}
+
+#bio textarea {
+    width: 400px;
+    height: 100px;
+
+}
+
+
+
+/* end uploader/profilePic/bioEditor */
+
+/* login */
+#loginDiv h1 {
+     font-family: "Roboto Slab", serif;
+    padding: 10px;
+}
+
+#loginDiv Link {
+       font-family: "Roboto Slab", serif;
+    padding: 10px;
+}
+
+#loginA {
+       font-family: "Roboto Slab", serif;
+    padding: 10px;
+}
+   
+
+/* end login */
+
+/* resetPassword */
+#resetP1 {
+    display: flex;
+    justify-content: center;
+    align-self: flex-end;
+    flex-direction: column;
+    margin: 150px
+}
+
+/* end resetPassword */
+
+/* bioEditor  */
 
