--- a/client/style.css
+++ b/client/style.css
@@ -1,6 +1,6 @@
 /* Welcome/registration/login */
 .logo {
-    position: absolute;
+    /* position: absolute; */
     width: 200px;
     top: 0;
     left: 0;
