--- a/client/style.css
+++ b/client/style.css
@@ -41,6 +41,7 @@
     font-size: 20px;
 }
 
+
 .footer p {
     position: fixed;
     bottom: 0;
@@ -67,19 +68,17 @@
 }
 
 #registerA {
-        font-family: "Roboto Slab", serif;
+    font-family: "Roboto Slab", serif;
     padding: 10px;
 }
 
 #linksTo {
     font-family: "Roboto Slab", serif;
-    padding: 10px; 
+    padding: 10px;
     display: flex;
-    align-items: flex-start; 
+    align-items: flex-start;
     justify-content: center;
-    
 }
-
 
 /* end welcome/registration */
 
@@ -101,18 +100,22 @@
     border: 3px solid black;
     border-radius: 50%;
     object-fit: cover;
-    
 }
 
 .bioPicClass {
     display: flex;
     justify-content: center;
     /* border: 3px dotted black; */
-    flex-direction: column; 
-   /* align-items: center; */
-   width: 500px;
-   /* align-self: center; */
-   align-items: flex-start;
+    flex-direction: column;
+    /* align-items: center; */
+    width: 500px;
+    /* align-self: center; */
+    align-items: flex-start;
+}
+
+.bioPicClass h5 {
+    text-align: center;
+    width: 100%;
 }
 
 .profilePage {
@@ -121,26 +124,22 @@
 }
 
 .profilePage h5 {
-
 }
 
 .bioPic {
     border: 3px solid purple;
     width: 500px;
-     border: 2px dotted black;
-     
+    border: 2px dotted black;
 }
 
 #bio {
     /* border: 2px red solid; */
-    width: 100vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    align-self: center;
+    width: 100%;
+    text-align: center;
     flex-direction: column;
     font-family: "Roboto Slab", serif;
     padding: 10px;
+    /* margin: 10px; */
     text-decoration: underline;
 }
 
@@ -153,28 +152,24 @@
 #bio textarea {
     width: 400px;
     height: 100px;
-
 }
-
-
 
 /* end uploader/profilePic/bioEditor */
 
 /* login */
 #loginDiv h1 {
-     font-family: "Roboto Slab", serif;
+    font-family: "Roboto Slab", serif;
     padding: 10px;
     text-align: center;
 }
 
 #loginDiv Link {
-       font-family: "Roboto Slab", serif;
+    font-family: "Roboto Slab", serif;
     padding: 10px;
-    
 }
 
 #loginA {
-       font-family: "Roboto Slab", serif;
+    font-family: "Roboto Slab", serif;
     padding: 10px;
 }
 
@@ -184,7 +179,6 @@
     justify-content: center;
     flex-direction: column;
 }
-   
 
 /* end login */
 
@@ -194,16 +188,17 @@
     justify-content: center;
     align-self: flex-end;
     flex-direction: column;
-    margin: 150px
+    margin: 150px;
 }
 
 /* end resetPassword */
 
 /* findpeople  */
-#findPeoplePic {
+.findPeoplePic {
     width: 250px;
-    
+    height: 250px;
+    border: 3px solid green;
+    object-fit: contain;
 }
 
 /* end findPeople */
-
