--- a/client/style.css
+++ b/client/style.css
@@ -339,3 +339,40 @@
     padding: 10px;
 }
 /* endFriendship */
+
+/* friends */
+.requestImg {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+     border: 3px solid #fd7b95;
+     object-fit: cover;
+     margin: 10px;
+      
+}
+
+.requestDiv p {
+    margin: -6px;
+    text-align: center;
+}
+
+.friendsFlex {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    
+}
+
+.requestName {
+        font-family: "Roboto Slab", serif;
+    padding: 10px; 
+}
+
+.friendsButton {
+    font-family: "Roboto Slab", serif;
+    padding: 10px;
+    margin-left: 40px;
+}
+
+/* endFriends */
