--- a/client/src/login.css
+++ b/client/src/login.css
@@ -4,7 +4,7 @@
     color: #001725;
 }
 
-.registerContainer {
+.loginContainer {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: 1fr;
@@ -12,25 +12,14 @@
     grid-row-gap: 0px;
 }
 
-.registrationImg {
+.loginImg {
     width: 50vw;
    grid-area: 1 / 1 / 2 / 2; 
     object-fit: cover;
     height: 100vh;
 }
 
-#welcomePage input {
-    display: block;
-    margin: 10px;
-    width: 200px;
-}
-
-.plantmore {
-    font-size: 50px;
-    margin-bottom: 50px;
-}
-
-#registerDiv {
+#loginDiv {
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -47,4 +36,15 @@
     margin: 10px;
     margin-top: 30px;
     font-size: 20px;
+}
+
+.plantmore {
+    font-size: 50px;
+    margin-bottom: 50px;
+}
+
+.loginDiv input {
+    display: block;
+    margin: 10px;
+    width: 200px;
 }
