--- a/client/src/registration.css
+++ b/client/src/registration.css
@@ -46,4 +46,13 @@
     margin: 10px;
     margin-top: 30px;
     font-size: 20px;
+    /* font-family: 'Lora', serif; */
+    cursor:pointer;
 }
+
+.register {
+    font-family: 'Lora', serif;
+    padding: 10px;
+    margin-top: 10px;
+}
+
