--- a/client/src/profile.css
+++ b/client/src/profile.css
@@ -9,7 +9,7 @@ grid-row-gap: 0px;
 
 .bioPic {
     width: 350px;
-    border: 3px solid #ACCAC0;
+    border: 3px solid #6F9F95;
     height: 350px;
     object-fit: cover;
 }
@@ -27,7 +27,6 @@ grid-row-gap: 0px;
     text-align: center;
     width: 100%;
     color: #2C6240;
-    
     margin-top: 50px;
     margin-bottom: 30px;
 }
@@ -40,22 +39,34 @@ grid-row-gap: 0px;
     color: #2C6240;
     display: flex;
     justify-content: center;
+    flex-direction: column;  
+    align-items: center;
 }
 
 .textAreaBio {
     width: 250px;
     height: 80px;
+    margin-top:10px;
 }
 
 .addOrEdit {
     font-family: 'Lora';
     color: #2C6240;
     margin-top: 10px;
-    align-items: center; 
+    width: 50px;
+    /* justify-content: center; */
 }
 
 .save {
     font-family: 'Lora';
     color: #2C6240;
     height: 20px;
+    margin-top:10px;
+}
+
+.gridPlants {
+    grid-area: 1 / 2 / 2 / 3;
+    display: flex;
+    flex-direction: column;
+    
 }
