--- a/client/src/favoritePlants.css
+++ b/client/src/favoritePlants.css
@@ -1,37 +1,51 @@
+
+
 .favoritePlants {
-    margin-top: 100px;
-    margin-bottom: 130px;
-     display: flex;
+    /* margin-top: 100px; */
+    /* margin-bottom: 130px; */
+    display: flex;
+    align-items: center;
     justify-content: center;
     width: 500px;
-    text-decoration: underline;
+    /* text-decoration: underline; */
     font-family: 'Lora';
     color: #2C6240;
+    margin: 20px;
+    margin-bottom: 50px;
 }
 
 .favoritePlants h3 {
     justify-content: center;
     align-items: center;
-    align-self: centeR;
+    align-self: center;
     margin-right: 50px;
     color: #2C6240;
 }
 
-.offeredPlants {
+.favoritePlantsContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding:50px;
+}
+
+/* .offeredPlants {
      display: flex;
     justify-content: center;
     width: 500px;
     text-decoration: underline;
     font-family: 'Lora';
     color: #2C6240;
-}
+    
+} */
 
 .offeredPlants h3 {
       justify-content: center;
     align-items: center;
-    align-self: centeR;
-    margin-right: 50px;
-    margin-left: -76px;
+    align-self: center;
+    /* margin-right: 50px;
+    margin-left: -76px; */
     color: #2C6240;
 }
 
@@ -40,6 +54,8 @@
     width: 100px;
     grid-area: 1 / 1 / 2 / 2;
     border-radius: 50%;
+    object-fit: fill;
+    
 }
 
 .offPlants {
@@ -56,8 +72,19 @@
 
 .common_name {
     text-align: center;
-    margin-right: 5px;
     font-size: 12px;
+    margin: 8px;
 }
 
+.buttonWishlist {
+    text-align: center;
+}
 
+.buttonOfferedPlants {
+    text-align: center;
+    margin-top: 5px;
+}
+
+.button {
+     font-family: 'Lora';
+}
