--- a/client/src/uploader.css
+++ b/client/src/uploader.css
@@ -9,12 +9,16 @@
     font-family: "Roboto Slab", serif;
     padding: 15px;
     padding-bottom: 63px;
-    /* -webkit-box-shadow: 18px 18px 0px 0px rgba(0, 0, 0, 1);
-    -moz-box-shadow: 18px 18px 0px 0px rgba(0, 0, 0, 1);
-    box-shadow: 18px 18px 0px 0px rgba(0, 0, 0, 1); */
-            /* box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset; */
-
-
   box-shadow: 0 8px 6px -6px black;
 
+}
+
+.uploaderContainer {
+  background-color: rgba(0, 0, 0, 0.5);
+  width: 100%;
+  height: 100%;
+  z-index: 10000;
+  position: fixed;
+  top: 0;
+  left: 0;
 }
