--- a/client/src/plantSearch.css
+++ b/client/src/plantSearch.css
@@ -32,8 +32,14 @@
     text-align: center;
 }
 
+.plantSearchDiv p {
+    font-family: "Lora";
+}
+
 .avatar {
     width: 200px;
     height: 200px;
     border-radius: 20%;
 }
+
+
