--- a/client/src/uploader.css
+++ b/client/src/uploader.css
@@ -6,7 +6,7 @@
     transform: translate(-50%, -50%);
     background-color: #ACCAC0;
     margin: 10px;
-    font-family: "Roboto Slab", serif;
+    font-family: 'Lora';
     padding: 15px;
     padding-bottom: 63px;
   box-shadow: 0 8px 6px -6px black;
