--- a/client/style.css
+++ b/client/style.css
@@ -1,16 +1,16 @@
-
+/* 
 #profilePicca {
     display: flex;
     /* justify-content: flex-end; */
-}
 
 
 
 
-.profilePage {
+
+/* .profilePage {
     display: flex;
     justify-content: center;
-}
+} */
 
 /* .profilePage h5 {
 } */
@@ -23,11 +23,11 @@
 
 
 /* resetPassword */
-#resetP1 {
+/* #resetP1 {
     display: flex;
     justify-content: center;
     align-self: flex-end;
     flex-direction: column;
     margin: 150px;
-}
+} */ 
 
