--- a/client/src/onlineUsers.css
+++ b/client/src/onlineUsers.css
@@ -1,16 +1,25 @@
-.onlineUsersContainer{
-    display: flex; 
+.onlineUsersContainer {
+    display: flex;
     justify-content: flex-start;
     flex-direction: column;
     align-items: center;
-    /* border: 3px solid cornflowerblue; */
-    width: 300px;
     height: 600px;
-    /* top: 25%;
-    left: 5px; */
     text-align: center;
-     font-family: 'Lora', serif;
+    font-family: "Lora", serif;
     padding: 10px;
+}
+
+.onlineUsersContainer h3 {
+    align-self: flex-start;
+}
+.onlineInfo {
+    align-self: flex-start;
+    margin-left: 50px;
+}
+
+.onlineUserDiv {
+    display: flex;
+    width: 100%;
 }
 
 .onlineUsersContainer h3 {
@@ -22,4 +31,12 @@
     width: 50px;
     border-radius: 50%;
     object-fit: cover;
+}
+
+.modal {
+    width: 20%;
+    top: 115px;
+    position: fixed;
+    left: 400px;
+    
 }
