--- a/client/src/chat.css
+++ b/client/src/chat.css
@@ -15,6 +15,19 @@ grid-row-gap: 0px;
     text-align: center;
 } 
 
+.chat-container h3 {
+ font-family: "Lora";
+ color: #6F9F95;
+}
+
+.chatNames {
+    color: #2C6240;
+}
+
+.chatBericht {
+    color: #ACCAC0;
+}
+
 .chatImg {
     height: 50px;
     width: 50px;
